--- a/blog/src/data/blog/04-03-2020-php-docker-development-environment.mdx
+++ b/blog/src/data/blog/04-03-2020-php-docker-development-environment.mdx
@@ -83,8 +83,7 @@ When a new container is created from a given image tag or layer ID, it is built 
 
 ##### Immutable vs mutable images
 
-Usually, managing state on your applications is harder than not doing so. Because state introduces more variables you have to deal with. 
-Such is the strength of a functional vs object-oriented programming paradigm.  
+Usually, managing state on your applications is harder than not doing so. 
 And something similar happens with infrastructure-as-code; Deployment of immutable images are easier to implement.
 
 <br/>
@@ -208,8 +207,8 @@ Because the container was started with the **--rm** flag, docker destroys the co
 
 ### The big picture
 
-All the code you are going to see it's available at [my Github repo](https://github.com/guille-mas/awesome-php74-env).
-The project contains a few files and folders. The most important ones are briefly explained below:
+Every code sample its based on [the code](https://github.com/guille-mas/awesome-php74-env) from a docker image.
+The project contains a few files and folders. The most relevant are briefly explained below:
 
 ###### Dockerfile
 
@@ -252,24 +251,45 @@ What you write on this file should be the minimal amount of information, needed 
 
 #### A containerized workflow example
 
-This is an example workflow a development team could adopt to work with this containerized development environment:
+At Imaginary startup, a small group of engineers work together on a tight loop, delivering daily changes to their SaaS source code.  
+Today, a new service for their customers, will be deployed to production.  
+This service requires the implementation of new endpoints on their API, which are expected to process a 10% of their total requests, consuming several more resources than other enpoints.
+The team decides to split the production infrastructure cluster in charge of handling their API.
 
-A new stable version of the codebase is ready to be deployed to a production server, containing changes to the environment. We call it version 2.0.  
-The new codebase contains both: the source code of the PHP app, and the source code of the containerized development environment.
+<br/>
 
-1. The new version is deployed to production and tagged v2.0.
-1. A developer in charge of maintaining the docker image: pulls v1.0 code versions.
-    1. Build a new version of the container.
-    1. Run automated tests locally.
-    1. Push it to the Docker repo with tag v2.0, next to several previous versions of the docker image.
-    1. Updates the upstream branch of the source code.
-1. The next morning, when a developer pulls the latest changes from the upstream stable branch, it will get as well an updated version for the docker image to use as a development environment.
-1. The dev start the environment, and without knowing it would happen, a new version of the development environment is pulled from the docker repository.
-    1. If another developer is working on an older version of the code, it's development environment won't be updated.
-1. A third developer realizes an improvement could be done to the configuration of the development environment v2.0.
-    1. She pushes the improvement to a new branch.
-    1. Open a Merge Request and assign it to the maintainer.
-    1. The maintainer reviews it, and if approved, the new source code is deployed to production and tagged v2.1.
+Because they where few, they choose not long ago, to start declaring their infrastructure as code. 
+And because the task was hard, they decided to use a monorepo, to keep their deployments more manageable.
+
+<br/>
+
+So the day has come to deliver the service their customers expect, and they have been working out a semi automated process to deploy it.
+
+<br/>
+
+The traffic must split between two clusters of groups of containerized API workers, running behind a load balancer, operating at the 7th OSI layer.
+Someone capable of running deployments, drops a few lines at the command line.
+
+<Code language="bash"
+snippet={`git checkout master
+git pull origin master
+git tag -a v3.1
+git push origin master
+make test-images    # run automated tests
+make build-images   # create 1 image per runtime environment
+make share-images-with-team  # upload every new image to a privately shared repository for docker images
+make deploy # roll infrastructure changes`} />
+
+Two clusters of machines are deployed, next to the previous cluster that was previously running.
+Once the new infrastructure is ready to go, the load balancer redirects the traffic to the new infrastructure, and stops the old one an hour later.  
+This is called a blue/green deployment and should provide an uninterrupted user experience to their customers, while deployments happen in the background.
+
+<br/>
+
+Minutes after the last deployment, another developer pulls the code from the master branch, and updates her development environment: A development docker container, based on the production one, with different settings and added tools to ease debugging and development.
+
+<Code language="bash" snippet={`git pull origin master
+make reload-dev-environment`} />
 
 <hr/>
 
@@ -332,9 +352,7 @@ You can use [Chrome's XDebug Helper](https://chrome.google.com/webstore/detail/x
 1. An HTTP request containing the param **XDEBUG_SESSION_START** is sent to the webserver
 1. XDebug pauses the flow of your program, attempts to connect back to your computer at localhost:9001, and waits for your orders.
 1. Your editor accepts the connection
-1. If there is a breakpoint in your code, the webserver will halt it's execution there, and send it to your editor, all the information available about the current context.
-
-From there, you will have complete visibility on every variable, constant, object, created on the current context, and every frame of the memory stack of your PHP programs.  
+1. If there is a breakpoint in your code, the debugger will inform your IDE of the current context of your running app, including the value of every variable, constant, object, created on the current context, and every frame of the memory stack of your PHP programs.  
 You can use the debugger like you would use a javascript debugger from your browser.
 
 <br/>
